fix: Enlarged row height on mobile

--- a/src/drive/styles/table.styl
+++ b/src/drive/styles/table.styl
@@ -169,6 +169,7 @@ mime-types('fil-file-', '../assets/icons/')
         white-space nowrap
 
 .fil-file-path
+.fil-file-infos
     flex 0 0 1.2rem
     color coolGrey
     font-size .75rem
@@ -241,6 +242,9 @@ mime-types('fil-file-', '../assets/icons/')
             margin-bottom 3rem
 
 +small-screen()
+    .fil-content-row
+        height 4rem
+    
     .fil-content-head
     .fil-content-date
     .fil-content-size
